--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "async": "~0.2.9",
     "lodash-node": "~2.4.1",
     "glob": "~3.2.8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pulseenergy/tumor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pulseenergy/tumor/issues"
+  },
+  "homepage": "https://github.com/pulseenergy/tumor"
 }
