--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "async": "~0.6.1",
-    "lodash-node": "~2.4.1",
-    "glob": "~3.2.8",
     "cli-color": "~0.2.3",
+    "glob": "~3.2.8",
+    "hosted-git-info": "^1.5.3",
+    "lodash-node": "~2.4.1",
     "rc": "~0.3.5"
   },
   "devDependencies": {
