check out correct branch when cloning dependencies
once it's linked you're responsible for keeping it in sync

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "glob": "~3.2.8",
     "hosted-git-info": "^1.5.3",
     "lodash-node": "~2.4.1",
+    "normalize-git-url": "^1.0.0",
     "npm-package-arg": "^3.1.0",
     "rc": "~0.3.5"
   },
