--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "^3.7.0",
     "normalize-git-url": "^1.0.0",
     "npm-package-arg": "^4.0.0",
-    "rc": "~0.3.5"
+    "rc": "~0.3.5",
+    "semver": "^4.3.3"
   },
   "devDependencies": {
     "mocha": "~1.18.0",
