--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "te": "./bin/te"
   },
   "scripts": {
-    "test": "mocha test --reporter spec && jshint lib test"
+    "test": "mocha test --reporter spec && eslint ."
   },
   "dependencies": {
     "async": "~0.6.1",
@@ -21,8 +21,10 @@
     "semver": "^4.3.3"
   },
   "devDependencies": {
-    "mocha": "~1.18.0",
-    "jshint": "~2.4.0"
+    "eslint": "^1.10.1",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1",
+    "mocha": "~1.18.0"
   },
   "repository": {
     "type": "git",
