--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "async": "~0.6.1",
-    "cli-color": "~0.2.3",
+    "chalk": "^1.1.1",
     "glob": "^5.0.5",
     "hosted-git-info": "^2.1.2",
     "lodash": "^3.7.0",
