--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "semver": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "^1.10.1",
-    "eslint-config-standard": "^4.4.0",
+    "eslint": "^2.5.3",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.1",
     "mocha": "~1.18.0"
   },
