--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "te": "./bin/te"
   },
   "scripts": {
-    "test": "mocha test --reporter spec && eslint ."
+    "test": "mocha test && eslint ."
   },
   "dependencies": {
     "async": "^1.5.2",
@@ -25,7 +25,7 @@
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.1",
-    "mocha": "~1.18.0"
+    "mocha": "^2.4.5"
   },
   "repository": {
     "type": "git",
