--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "glob": "^7.0.3",
     "hosted-git-info": "^2.1.2",
     "lodash": "^4.6.1",
+    "mkdirp": "^0.5.1",
     "normalize-git-url": "^3.0.1",
     "npm-package-arg": "^4.0.0",
     "rc": "~0.3.5",
